fix scrollbar border radius

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -14,6 +14,7 @@
 /* Track */
 ::-webkit-scrollbar-track {
   background: #000000;
+  border-radius: 8px;
 }
 
 /* Handle */
